<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >
    
   <com.tempus.traceback.ActionbarView
        android:id="@+id/login_actionbar"
        style="@style/ActionBarText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/whitesmoke" />
   
   <EditText 
       android:id="@+id/account"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="30dp"
       android:layout_marginRight="20dp"
       android:layout_marginLeft="20dp"
       android:hint="@string/phone_num"
      />
   
   <EditText 
       android:id="@+id/passward"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="15dp"
       android:layout_marginRight="20dp"
       android:layout_marginLeft="20dp"
       android:hint="@string/passward"
      />
   
  <Button
     android:id="@+id/login_btn"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="50dp"
     android:layout_marginRight="20dp"
     android:layout_marginLeft="20dp"
     android:text="@string/login"
     android:paddingTop="10dp"
     android:paddingBottom="10dp"
     android:textSize="20sp"
     android:background="@drawable/circulor_btn"
   />
    

</LinearLayout>
