<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >
    
    
    <com.tempus.traceback.ActionbarView
        android:id="@+id/write_actionbar"
        style="@style/ActionBarText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/whitesmoke" />
    
    <RelativeLayout
       android:id="@+id/search_line" 
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_below="@+id/write_actionbar"
       android:layout_marginTop="5dp"
       >
        <EditText 
            android:id="@+id/search_ed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_toLeftOf="@+id/search_tx"
            android:background="@color/gray"
            android:hint="@string/search_hint"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textSize="20sp"
        />
        
        
        <TextView 
            android:id="@+id/search_tx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:textColor="@color/black"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:textSize="20sp"
            android:background="@drawable/circulor_textview"
            android:layout_marginRight="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            />
        
    </RelativeLayout>
    
    <ListView 
        android:id="@+id/goods_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/search_line"/>
        
        
    
    
    
    <TextView
	    android:id="@+id/noteText"
	    android:textSize="20dp"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_centerInParent="true"
	    android:text="@string/near_device" 
	  />
    
    
    
	
</RelativeLayout>
